 - Fixes #7212 - Error in CreateReturnLink api method.
 - Fixes #7334 - Changing a content page with a url specified to a section header.
 - Fixes #7030 - Installing modules in listmodules skips dependency check.
 - Adds new CmsNlsOperations and CmsNlsOperations classes to better support language serverices
   - deprecated the lang parameter to all plugins and modules.
 - Adds new abstract CmsLanguageDetector class to handle language detection on the frontend.
 - locale can now be configured in the NLS information
 - Encoding can now be configured in the NLS information
 - Remove more stuff from the cms_variables class (slowly getting rid of this).
 - Installer and system information pages now check curl, and curl version.
 - Change the alt tag in {content_image} to return the image name by default.
 - System information page now attempts to determine if there are sufficient mysql privileges for normal operation (warning only on failure).
 
Core - Bug Reports:
 - #6161 Core Printing Module - Compression issue
 - #7740 HTML entities in the language string aren't getting converted back when sending the email during install

Core - Feature Requests:


Core - General:


Core - Installer:
  - mysqli option now selected by default.
  - Add checks for xml handling.

CMSMailer:


MenuManager:
- Added the {cms_breadcrumbs} action (which is templatable).  deprecates {breadcrumbs}
- Fixes #7306 - haschildren always fals
- Adds the action=items capability.
	

MicroTiny:
 - Two new preferences to assist in managing stylesheet and other background settings.
 - #7223 (fixes for secure admin).

News:
 - All routes are now registered statically
 - The {news} plugin is now part of the News module
 - The detail page now handles caching well.
 - The detail page now throws a 404 exception for attempts to view expired/draft articles.
 - Full lazyload is now supported.
 - Now supports smarty caching
 - optimization of code to minimize queries (preload field data for summary views).